<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_splash_background"
    tools:context=".presentation.feature.login.LoginFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUserInputError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proximalight"
        android:textColor="@color/item_red"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/userVg"
        app:layout_constraintStart_toStartOf="@+id/userVg"
        tools:text="@string/error_user_input_hint" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/userVg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:clickable="false"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txUserInputVg"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:hint="@null"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_user">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUserInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/proximaregular"
                    android:hint="@string/user_id_input_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:paddingVertical="4dp"
                    android:textColor="@color/item_main"
                    android:textColorHint="@color/item_hint"
                    android:textSize="14sp"
                    android:theme="@style/ThemeOverlay.App.TextInputLayout" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPasswordInputError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proximalight"
        android:textColor="@color/item_red"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/passwordVg"
        app:layout_constraintStart_toStartOf="@+id/passwordVg"
        tools:text="@string/error_password_input_hint" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/passwordVg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:clickable="false"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userVg">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txPasswordInputVg"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:hint="@null"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/proximaregular"
                    android:hint="@string/user_password_input_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:paddingVertical="4dp"
                    android:textColor="@color/item_main"
                    android:textColorHint="@color/item_hint"
                    android:textSize="14sp"
                    android:theme="@style/ThemeOverlay.App.TextInputLayout" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/item_sub_main"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/proximaregular"
        android:paddingVertical="16dp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cornerRadius="4dp"
        app:rippleColor="@color/item_ripple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordVg" />

</androidx.constraintlayout.widget.ConstraintLayout>